[gd_scene load_steps=6 format=3 uid="uid://cxxfvbsbhm1oh"]

[ext_resource type="Script" uid="uid://d3jso6fbnv5xy" path="res://Scripts/project_track.gd" id="1_5y7e1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5y7e1"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8am6o"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgx3e"]
bg_color = Color(1, 0.654902, 0.14901961, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 7
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtr7d"]
bg_color = Color(0.4, 0.73333335, 0.41568628, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="ProjectTrack" type="Control"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 3
anchors_preset = 0
offset_bottom = 50.0
script = ExtResource("1_5y7e1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5y7e1")

[node name="Layout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="RoleLabel" type="Label" parent="Layout"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
text = "BA"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Layout"]
layout_mode = 2

[node name="AssignWrapper" type="CenterContainer" parent="Layout"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="AssignButton" type="Button" parent="Layout/AssignWrapper"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.17254902, 0.30980393, 0.5686275, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_8am6o")
text = "Назначить"

[node name="VSeparator2" type="VSeparator" parent="Layout"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="Layout"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8980392, 0.22352941, 0.20784314, 1)
text = "0 / 1000"
horizontal_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="Layout"]
layout_mode = 2

[node name="GanttArea" type="Control" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VisualBar" type="Panel" parent="Layout/GanttArea"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rgx3e")

[node name="ProgressBar" type="Panel" parent="Layout/GanttArea"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gtr7d")
